tests/ui/inline-disallow-on-variant.rs
enum Foo {
    #[inline]
    //~^ ERROR attribute should be applied
    Variant,
}

fn main() {}
